--- a/src/app/(home)/components/main-logo/main-logo.module.scss
+++ b/src/app/(home)/components/main-logo/main-logo.module.scss
@@ -7,11 +7,13 @@
   justify-content: center;
   overflow: hidden;
   background-color: black;
+
   .landingContent {
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
+
     .videoContainer {
       display: flex;
       align-items: center;
@@ -19,12 +21,14 @@
       width: 390px;
       height: 200px;
       position: relative;
+
       .videoWrapper {
         display: flex;
         align-items: center;
         justify-content: center;
         width: 100%;
         height: 100%;
+
         .backgroundVideo {
           width: 100%;
           height: 100%;
@@ -35,11 +39,15 @@
         }
       }
     }
+
     .textContent {
+
       .newText {
         font-size: 32px;
         font-weight: 700;
         line-height: 1.5rem;
+        color: white;
+        text-align: center;
       }
     }
   }
