Combined different svgs to nexr logo

--- a/src/app/(home)/components/main-logo/main-logo.module.scss
+++ b/src/app/(home)/components/main-logo/main-logo.module.scss
@@ -14,43 +14,36 @@
     align-items: center;
     flex-direction: column;
     gap: 4rem;
+    position: relative;
+    height: 600px;
+    width: 432px;
 
-    .videoContainer {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      width: 390px;
-      height: 200px;
-      position: relative;
-
-      .videoWrapper {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        width: 100%;
-        height: 100%;
-
-        .backgroundVideo {
-          width: 100%;
-          height: 100%;
-          object-fit: cover;
-          position: absolute;
-          left: 90px;
-        }
-      }
+    .imageOne {
+      position: absolute;
+      left: 39px;
+      width: 165px;
+      height: 230px;
     }
-
-    .textContent {
-      width: 100%;
-      .newText {
-        font-size: 32px;
-        font-weight: 700;
-        line-height: 1.5rem;
-        color: white;
-        text-align: center;
-        letter-spacing: 10px;
-        padding-left: 2px;
-      }
+    .imageTwo {
+      position: absolute;
+      right: 43px;
+      top: 11rem;
+      width: 276px;
+      height: 236px;
+    }
+    .imageThree {
+      position: absolute;
+      top: 12.1rem;
+      right: 7.3rem;
+    }
+    .imageThreeAlt {
+      position: absolute;
+      top: 12.1rem;
+      right: 8rem;
+    }
+    .imageFour {
+      position: absolute;
+      bottom: 40px;
     }
   }
 }
