--- a/src/app/(home)/components/main-logo/main-logo.module.scss
+++ b/src/app/(home)/components/main-logo/main-logo.module.scss
@@ -26,51 +26,51 @@
       flex-direction: column;
       gap: 4rem;
       position: relative;
-      height: 600px;
-      width: 432px;
-      margin-top: -180px;
+      height: 37.5rem;
+      width: 27rem;
+      margin-top: -11.25rem;
   
       .imageOneWrapper {
         position: absolute;
-        left: 39px;
+        left: 2.438rem;
         top: 11.5rem;
         z-index: 1;
       }
       
       .imageOne {
-        width: 165px;
-        height: 230px;
+        width: 10.313rem;
+        height: 14.375rem;
       }
       
       .imageTwoWrapper {
         position: absolute;
-        right: 43px;
+        right: 2.688rem;
         top: 11rem;
         z-index: 1;
       }
       
       .imageTwo {
-        width: 276px;
-        height: 236px;
+        width: 17.25rem;
+        height: 14.75rem;
       }
       
       .imageThreeWrapper {
         position: absolute;
-        top: 12.047rem;
+        top: 12.09rem;
         right: 7.3rem;
         z-index: 1;
       }
       
       .imageThreeAltWrapper {
         position: absolute;
-        top: 12.047rem;
+        top: 12.09rem;
         right: 8rem;
         z-index: 1;
       }
       
       .imageFourWrapper {
         position: absolute;
-        bottom: 40px;
+        bottom: 2.5rem;
         z-index: 1;
         filter: brightness(200%);
       }
@@ -94,7 +94,7 @@
         .emailLink {
           color: #fff;
           text-decoration: underline;
-          margin-left: 5px;
+          margin-left: 0.313rem;
           transition: color 0.3s ease;
           font-weight: 700;
       
@@ -132,7 +132,7 @@
   filter: brightness(50%);
 }
 
-@media (max-width: 768px) {
+@media (max-width: 48rem) {
   .container {
     .landingContainer {
       padding: 1rem;
@@ -142,8 +142,8 @@
           top: 17rem;
           left: 5rem;
           .imageOne {
-            width: 140px;
-            height: 161px;
+            width: 8.75rem;
+            height: 10.063rem;
           }
         }
 
@@ -151,8 +151,8 @@
           top: 15.9rem;
           right: 6rem;
           .imageTwo {
-            width: 190px;
-            height: 190px;
+            width: 11.875rem;
+            height: 11.875rem;
           }
         }
 
@@ -169,14 +169,14 @@
           top: 16.95rem;
           right: 9.5rem;
           .imageThreeAlt {
-            width: 50px;
-            height: 50px;
+            width: 3.125rem;
+            height: 3.125rem;
           }
         }
 
         .imageFourWrapper {
           .imageFour {
-            width: 250px;
+            width: 15.625rem;
           }
         }
       }
