--- a/src/app/(home)/components/main-logo/main-logo.module.scss
+++ b/src/app/(home)/components/main-logo/main-logo.module.scss
@@ -187,6 +187,7 @@
         .contactSection {
           display: flex;
           flex-direction: column;
+          gap: 0.5rem;
         }
       }
     }
